Replace Phonon with QtMultimedia
QtMultimedia's API is very similar to Phonon's and allows to replace the media backend with something better maintained.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,11 +57,10 @@ set(MAILIMPORTER_LIB_VERSION "6.3.40")
 set(LIBKDEPIM_LIB_VERSION "6.3.40")
 set(PIMCOMMON_LIB_VERSION "6.3.40")
 
-set(PHONON_LIB_VERSION "4.12.0")
 set(AKONADI_VERSION "6.3.40")
 set(KTEXTADDONS_MIN_VERSION "1.5.4")
 
-find_package(Qt6 ${QT_REQUIRED_VERSION} CONFIG REQUIRED Widgets DBus Xml)
+find_package(Qt6 ${QT_REQUIRED_VERSION} CONFIG REQUIRED Widgets DBus Xml Multimedia)
 
 set(GPGMEPP_LIB_VERSION "1.20.0")
 find_package(Gpgmepp ${GPGMEPP_LIB_VERSION} CONFIG REQUIRED)
@@ -94,7 +93,6 @@ find_package(KPim6MessageViewer ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(KPim6Mime ${KMIME_LIB_VERSION} CONFIG REQUIRED)
 find_package(KPim6PimCommonAkonadi ${PIMCOMMON_LIB_VERSION} CONFIG REQUIRED)
 find_package(KPim6TemplateParser ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
-find_package(Phonon4Qt6 ${PHONON_LIB_VERSION} CONFIG REQUIRED)
 find_package(KPim6AkonadiContactWidgets ${AKONADICONTACT_LIB_VERSION} CONFIG REQUIRED)
 find_package(KPim6IdentityManagementCore ${KMIME_LIB_VERSION} CONFIG REQUIRED)
 find_package(KF6TextCustomEditor ${KTEXTADDONS_MIN_VERSION} CONFIG REQUIRED)
