--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -373,7 +373,7 @@ PRIVATE
   KPim6::MessageList
   KPim6::Mime
   KPim6::MailTransport
-  Phonon::phonon4qt6
+  Qt::Multimedia
   KF6::XmlGui
   KF6::KIOWidgets
   KF6::IconThemes
