--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,7 @@ set(PHONON_LIB_VERSION "4.12.0")
 set(AKONADI_VERSION "6.3.40")
 set(KTEXTADDONS_MIN_VERSION "1.5.4")
 
-find_package(Qt6 ${QT_REQUIRED_VERSION} CONFIG REQUIRED Widgets DBus Xml)
+find_package(Qt6 ${QT_REQUIRED_VERSION} CONFIG REQUIRED Widgets DBus Xml Multimedia)
 
 set(GPGMEPP_LIB_VERSION "1.20.0")
 find_package(Gpgmepp ${GPGMEPP_LIB_VERSION} CONFIG REQUIRED)
