Clean up here too

--- a/src/snippets/autotests/CMakeLists.txt
+++ b/src/snippets/autotests/CMakeLists.txt
@@ -5,7 +5,7 @@ macro(add_snippets _source)
      ecm_add_test(${_source} ${_name}.h
          TEST_NAME ${_name}
          NAME_PREFIX "mailcommon-filter-"
-         LINK_LIBRARIES Qt::Test Qt::Gui KPim6::MailCommon KF6::XmlGui
+         LINK_LIBRARIES Qt::Test KPim6::MailCommon KF6::XmlGui
     )
 
 endmacro()
