--- a/src/search/autotests/CMakeLists.txt
+++ b/src/search/autotests/CMakeLists.txt
@@ -1,44 +1,19 @@
 # SPDX-License-Identifier: CC0-1.0
 # SPDX-FileCopyrightText: none
-macro(add_search_autotest _name)
-    ecm_add_test(${ARGN}
+macro(add_search_autotest _source)
+    get_filename_component(_name ${_source} NAME_WE)
+    ecm_add_test(${_source} ${_name}.h
         TEST_NAME ${_name}
         NAME_PREFIX "mailcommon-search-"
         LINK_LIBRARIES Qt::Test KPim6::MailCommon KF6::Codecs
 )
 endmacro()
 
-add_search_autotest(searchpatterntest
-    searchpatterntest.cpp
-    searchpatterntest.h
-)
-add_search_autotest(searchruletest
-    searchruletest.cpp
-    searchruletest.h
-)
-
-add_search_autotest(searchruleattachmenttest
-	searchruleattachmenttest.cpp
-	searchruleattachmenttest.h
-)
-
-add_search_autotest(searchrulestatustest
-    searchrulestatustest.cpp
-    searchrulestatustest.h
-)
-add_search_autotest(searchrulenumericaltest
-    searchrulenumericaltest.cpp
-    searchrulenumericaltest.h
-)
-add_search_autotest(searchruledatetest
-    searchruledatetest.cpp
-    searchruledatetest.h
-)
-add_search_autotest(searchrulestringtest
-    searchrulestringtest.cpp
-    searchrulestringtest.h
-)
-add_search_autotest(searchruleencryptiontest
-    searchruleencryptiontest.cpp
-    searchruleencryptiontest.h
-)
+add_search_autotest(searchpatterntest.cpp)
+add_search_autotest(searchruletest.cpp)
+add_search_autotest(searchruleattachmenttest.cpp)
+add_search_autotest(searchrulestatustest.cpp)
+add_search_autotest(searchrulenumericaltest.cpp)
+add_search_autotest(searchruledatetest.cpp)
+add_search_autotest(searchrulestringtest.cpp)
+add_search_autotest(searchruleencryptiontest.cpp)
