--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -19,3 +19,6 @@ Dependencies:
  - 'on': ['Linux', 'FreeBSD']
    'require':
     'plasma/plasma-activities': '@latest-kf6'
+
+Options:
+ require-passing-tests-on: ['@all']
