Add missing KF6::ColorScheme link

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -7,6 +7,7 @@ Dependencies:
     'frameworks/extra-cmake-modules': '@latest-kf6'
     'frameworks/kcodecs': '@latest-kf6'
     'frameworks/karchive': '@latest-kf6'
+    'frameworks/kcolorscheme': '@latest-kf6'
     'pim/akonadi': '@same'
     'pim/akonadi-mime': '@same'
     'pim/kmailtransport': '@same'
