Add pre-commit CI support

--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -3,7 +3,11 @@
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
 
 add_akonadi_isolated_test(foldertreewidgettest.cpp)
-target_link_libraries(foldertreewidgettest KPim6::AkonadiWidgets KPim6::MailCommon)
+target_link_libraries(
+    foldertreewidgettest
+    KPim6::AkonadiWidgets
+    KPim6::MailCommon
+)
 
 add_akonadi_isolated_test(favoritestest.cpp)
 target_link_libraries(favoritestest KPim6::AkonadiWidgets KPim6::MailCommon)
