--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -658,3 +658,4 @@ if(BUILD_DESIGNERPLUGIN)
 endif()
 
 ecm_qt_install_logging_categories(EXPORT MAILCOMMON FILE mailcommon.categories DESTINATION ${KDE_INSTALL_LOGGINGCATEGORIESDIR})
+ecm_generate_qdoc(KPim6MailCommon mailcommon.qdocconf)
