--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -20,3 +20,7 @@ Dependencies:
  - 'on': ['Linux', 'FreeBSD']
    'require':
     'plasma/plasma-activities': '@latest-kf6'
+
+
+Options:
+  enable-lsan: True
