--- a/KPimMailCommonConfig.cmake.in
+++ b/KPimMailCommonConfig.cmake.in
@@ -1,10 +1,31 @@
 @PACKAGE_INIT@
 include(CMakeFindDependencyMacro)
-find_dependency(KPim6Akonadi "@AKONADI_VERSION@")
-find_dependency(KPim6AkonadiMime "@AKONADIMIME_LIB_VERSION@")
-find_dependency(KPim6Libkdepim "@LIBKDEPIM_LIB_VERSION@")
-find_dependency(KPim6MessageComposer "@MESSAGELIB_LIB_VERSION@")
-find_dependency(KPim6PimCommon "@PIMCOMMON_LIB_VERSION@")
-find_dependency(KPim6PimCommonAkonadi "@PIMCOMMON_LIB_VERSION@")
-find_dependency(KF6Completion "@KF_MIN_VERSION@")
+find_dependency(
+    KPim6Akonadi
+    "@AKONADI_VERSION@"
+)
+find_dependency(
+    KPim6AkonadiMime
+    "@AKONADIMIME_LIB_VERSION@"
+)
+find_dependency(
+    KPim6Libkdepim
+    "@LIBKDEPIM_LIB_VERSION@"
+)
+find_dependency(
+    KPim6MessageComposer
+    "@MESSAGELIB_LIB_VERSION@"
+)
+find_dependency(
+    KPim6PimCommon
+    "@PIMCOMMON_LIB_VERSION@"
+)
+find_dependency(
+    KPim6PimCommonAkonadi
+    "@PIMCOMMON_LIB_VERSION@"
+)
+find_dependency(
+    KF6Completion
+    "@KF_MIN_VERSION@"
+)
 include("${CMAKE_CURRENT_LIST_DIR}/KPim6MailCommonTargets.cmake")
